# cpp-perf-skills

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
docs/superpowers/plans/: 2026-03-19-cpp-perf-plan1-core-skill.md  2026-03-19-cpp-perf-plan2-knowledge-base.md  2026-03-19-cpp-perf-plan3-profiler.md
docs/superpowers/specs/: 2026-03-19-cpp-perf-skill-design.md  2026-03-19-instrumentation-design.md  2026-03-22-campaign-controller.md  2026-03-22-duckdb-campaign-smoke-test.md
reference/: README.md
skills/cpp-perf/: SKILL.md  cpp-perf.md
skills/cpp-perf/knowledge/: libraries.yaml
skills/cpp-perf/profiler/: .gitignore  CMakeLists.txt  common.h  main.cpp  measure_alloc.cpp  measure_branch.cpp  measure_cache.cpp  measure_compute.cpp  measure_io.cpp  measure_ipc.cpp  measure_memory.cpp  measure_os.cpp  output.cpp
skills/cpp-perf/profiles/: cortex-a55.yaml  cortex-a78.yaml  neoverse-n1.yaml  x86-skylake.yaml
skills/cpp-perf/templates/: benchmark.cpp.tmpl  correctness.cpp.tmpl  cpp_perf_probe.h
tests/: run_controller_tests.sh  run_goldens.sh
tests/controller/: test_campaign.py  test_duckdb_hooks.py
tests/goldens/case_custom_struct/: input.cpp
tests/goldens/case_free_function/: input.cpp  validate.sh
tests/goldens/case_inplace_sort/: input.cpp
tools/: __init__.py
tools/cpp_perf_campaign/: __init__.py  cli.py  config.py  db.py  discovery.py  duckdb_campaign.json  example_campaign.json  extract_context.py  mcp_clangd.json  memory.py  optimize_loop.py  runner.py  scheduler.py  scope_analyzer.py  util.py  watchdog.py  worktree.py
(+87 files in other folders)
